erDiagram
    CARTS ||--o{ CART_ITEMS : "cart_id"
    PRODUCTS ||--o{ CART_ITEMS : "product_id"
    USERS ||--o| CARTS : "customer_id"
    ORDERS ||--o| DELIVERIES : "order_id"
    USERS |o--o{ DELIVERIES : "delivery_partner_id"
    ORDERS ||--o{ ORDER_ITEMS : "order_id"
    PRODUCTS ||--o{ ORDER_ITEMS : "product_id"
    USERS ||--o{ ORDERS : "customer_id"
    SHOPS ||--o{ ORDERS : "shop_id"
    SHOPS ||--o{ PRODUCTS : "shop_id"
    CATEGORIES |o--o{ PRODUCTS : "category_id"
    USERS ||--o{ REVIEWS : "customer_id"
    PRODUCTS ||--o{ REVIEWS : "product_id"
    USERS ||--o| SHOPS : "owner_id"

    CART_ITEMS {
        int id PK
        int cart_id FK
        int product_id FK
        int quantity
    }
    CARTS {
        int id PK
        int customer_id FK,UK
        datetime created_at
    }
    CATEGORIES {
        int id PK
        string name UK
    }
    DELIVERIES {
        int id PK
        int order_id FK,UK
        int delivery_partner_id FK
        string status
        datetime assigned_at
        datetime delivered_at
    }
    ORDER_ITEMS {
        int id PK
        int order_id FK
        int product_id FK
        int quantity
        decimal price_at_purchase
    }
    ORDERS {
        int id PK
        int customer_id FK
        int shop_id FK
        decimal total_amount
        string delivery_address
        string status
        string payment_status
        datetime created_at
    }
    PRODUCTS {
        int id PK
        int shop_id FK
        int category_id FK
        string name
        text description
        decimal price
        int stock_quantity
        string image
        bool is_available
        datetime created_at
    }
    REVIEWS {
        int id PK
        int customer_id FK
        int product_id FK
        int rating
        text comment
        datetime created_at
    }
    SHOPS {
        int id PK
        int owner_id FK,UK
        string name
        text description
        string address
        string phone
        float latitude
        float longitude
        bool is_approved
        string rejection_reason
        datetime created_at
    }
    USERS {
        int id PK
        string name
        string email UK
        string password_hash
        string role
        bool is_active
        datetime created_at
    }
